--- a/style.scss
+++ b/style.scss
@@ -1,9 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Muli:wght&display=swap');
 
-* { box-sizing: border-box; }
+* {
+    box-sizing: border-box;
+}
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Muli', sans-serif;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -11,4 +13,40 @@ body {
     height: 100vh;
     overflow: hidden;
     margin: 0;
+    background-color: #2b7780;
+}
+
+.choices {
+    width: 500px;
+
+    &-textarea {
+        border: none;
+        display: block;
+        width: 100%;
+        height: 100px;
+        font-family: inherit;
+        padding: 10px;
+        margin: 0 0 20px;
+        font-size: 16px;
+    }
+
+    &-title {
+        color: #FFF;
+        margin: 10px 0 20px;
+        text-align: center;
+    }
+
+    &-tag {
+        background-color: #F0932b;
+        color: #FFF;
+        border-radius: 50px;
+        padding: 10px 20px;
+        margin: 0 5px 10px 0;
+        font-size: 14px;
+        display: inline-block;
+
+        &__highlighted {
+            background-color: #273c75;
+        }
+    }
 }
